fixed some index page layout issues

--- a/style.css
+++ b/style.css
@@ -153,9 +153,9 @@ body{
  }
  .img-container {
    /* margin-top: 135px; */
-   padding:10px;
+   padding: 1.2rem;
    display: grid;
-   grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+   grid-template-columns: repeat(auto-fit, minmax(175px, 1fr));
    grid-gap:.5rem;
    
  } 
